--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -4,10 +4,8 @@
 // Variables
 // ------------------------------------------------------------------------
 
-$color-p1: #8DECF4;
-$color-p2: #7AEC9F;
-$color-p3: #F2E880;
-$color-p4: #EEB8A0;
+$cyan: #6eebde;
+$pink: #ffdada;
 
 
 // ------------------------------------------------------------------------
