--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,11 +14,11 @@ footer, header, main, menu, nav, section, summary {
   display: block; }
 
 ::-moz-selection {
-  background: #a4f0f6;
+  background: #6eebde;
   color: black; }
 
 ::selection {
-  background: #a4f0f6;
+  background: #6eebde;
   color: black; }
 
 body:not(.user-is-tabbing) button:focus,
@@ -59,7 +59,7 @@ html body input:-internal-autofill-selected {
   font-size: 5.4vw;
   letter-spacing: 0;
   line-height: 1.3em;
-  font-weight: 600;
+  font-weight: 400;
   font-style: normal;
   font-stretch: normal; }
   @media (min-width: 576px) {
@@ -80,7 +80,7 @@ html body input:-internal-autofill-selected {
   font-size: 2.81vw;
   letter-spacing: 0;
   line-height: 1.3em;
-  font-weight: 600;
+  font-weight: 400;
   font-style: normal;
   font-stretch: normal; }
   @media (min-width: 576px) {
@@ -101,7 +101,7 @@ html body input:-internal-autofill-selected {
   font-size: 18px;
   letter-spacing: 0;
   line-height: 1.3em;
-  font-weight: 600;
+  font-weight: 400;
   font-style: normal;
   font-stretch: normal; }
   @media (min-width: 576px) {
