--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -56,30 +56,30 @@ html body input:-internal-autofill-selected {
   src: url("../fonts/Hatton-Regular.woff") format("woff"); }
 .font-huge {
   font-family: "Hatton", serif;
-  font-size: 5.4vw;
+  font-size: 5vw;
   letter-spacing: 0;
-  line-height: 1.3em;
+  line-height: 1.2;
   font-weight: 400;
   font-style: normal;
   font-stretch: normal; }
   @media (min-width: 576px) {
     .font-huge {
-      font-size: 5.4vw; } }
+      font-size: 5vw; } }
   @media (min-width: 768px) {
     .font-huge {
-      font-size: 5.4vw; } }
+      font-size: 5vw; } }
   @media (min-width: 992px) {
     .font-huge {
-      font-size: 5.4vw; } }
+      font-size: 5vw; } }
   @media (min-width: 1200px) {
     .font-huge {
-      font-size: 5.4vw; } }
+      font-size: 5vw; } }
 
 .font-large {
   font-family: "Hatton", serif;
   font-size: 2.81vw;
   letter-spacing: 0;
-  line-height: 1.3em;
+  line-height: 1.2;
   font-weight: 400;
   font-style: normal;
   font-stretch: normal; }
@@ -100,7 +100,7 @@ html body input:-internal-autofill-selected {
   font-family: "Hatton", serif;
   font-size: 18px;
   letter-spacing: 0;
-  line-height: 1.3em;
+  line-height: 1.2;
   font-weight: 400;
   font-style: normal;
   font-stretch: normal; }
@@ -136,5 +136,17 @@ html body input:-internal-autofill-selected {
 
 .color-white {
   color: white; }
+
+.container-fluid {
+  padding-left: 40px;
+  padding-right: 40px; }
+  .container-fluid .row {
+    padding-top: 40px;
+    padding-bottom: 40px; }
+
+main#collection section.collection-opening {
+  height: 90vh;
+  background-size: cover;
+  background-position: center center; }
 
 /*# sourceMappingURL=index.css.map */
