collection page images + gradient css

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -144,7 +144,48 @@ html body input:-internal-autofill-selected {
     padding-top: 40px;
     padding-bottom: 40px; }
 
-main#collection section.collection-opening {
+.gradient-bknd {
+  position: relative; }
+  .gradient-bknd:before {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 75vh;
+    width: 100%;
+    background: #6eebde;
+    /* Old browsers */
+    background: -moz-linear-gradient(top, #6eebde 0%, white 100%);
+    /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #6eebde), color-stop(100%, white));
+    /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #6eebde 0%, white 100%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #6eebde 0%, white 100%);
+    /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #6eebde 0%, white 100%);
+    /* IE10+ */
+    background: linear-gradient(to bottom, #6eebde 0%, white 100%);
+    /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
+    /* IE6-9 */ }
+
+.img-container {
+  margin-top: 33vw; }
+  .img-container .portrait-img {
+    width: calc(50% - 16vw);
+    height: 0;
+    padding-bottom: 50%;
+    margin: 8vw;
+    display: inline-block;
+    float: left;
+    background-size: cover;
+    background-position: center center; }
+    .img-container .portrait-img:nth-of-type(2n+1) {
+      margin-top: -10vw; }
+
+#collection section.collection-opening {
   height: 90vh;
   background-size: cover;
   background-position: center center; }
