collection page css complete

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -7,7 +7,7 @@
 $cyan: #6eebde;
 $pink: #ffdada;
 
-$margin: 20px;
+$margin: 30px;
 $double-margin: $margin*2;
 
 // ------------------------------------------------------------------------
@@ -83,14 +83,14 @@ $double-margin: $margin*2;
 		position: absolute;
 		top: 0;
 		left:0;
-		height: 75vh;
+		height: 100vh;
 		width: 100%;
 		@include linearGradientV($cyan, white);
 	}
 }
 
 .img-container {
-	margin-top: 25vw + 8vw;
+	margin-top: 25vw;
 	.portrait-img {
 		width: calc(50% - 16vw);
 	  height: 0;
@@ -109,6 +109,16 @@ $double-margin: $margin*2;
 #collection {
 	section.collection-opening {
 		height: 90vh;
+		background-size: cover;
+		background-position: center center;
+	}
+	.text-container {
+		margin-top: -10vw;
+	}
+	.moodboard {
+		margin:$double-margin -#{$double-margin};
+		height: 0;
+	  padding-bottom: 100%;
 		background-size: cover;
 		background-position: center center;
 	}
