--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -138,11 +138,11 @@ html body input:-internal-autofill-selected {
   color: white; }
 
 .container-fluid {
-  padding-left: 40px;
-  padding-right: 40px; }
+  padding-left: 60px;
+  padding-right: 60px; }
   .container-fluid .row {
-    padding-top: 40px;
-    padding-bottom: 40px; }
+    padding-top: 60px;
+    padding-bottom: 60px; }
 
 .gradient-bknd {
   position: relative; }
@@ -152,7 +152,7 @@ html body input:-internal-autofill-selected {
     position: absolute;
     top: 0;
     left: 0;
-    height: 75vh;
+    height: 100vh;
     width: 100%;
     background: #6eebde;
     /* Old browsers */
@@ -172,7 +172,7 @@ html body input:-internal-autofill-selected {
     /* IE6-9 */ }
 
 .img-container {
-  margin-top: 33vw; }
+  margin-top: 25vw; }
   .img-container .portrait-img {
     width: calc(50% - 16vw);
     height: 0;
@@ -187,6 +187,14 @@ html body input:-internal-autofill-selected {
 
 #collection section.collection-opening {
   height: 90vh;
+  background-size: cover;
+  background-position: center center; }
+#collection .text-container {
+  margin-top: -10vw; }
+#collection .moodboard {
+  margin: 60px -60px;
+  height: 0;
+  padding-bottom: 100%;
   background-size: cover;
   background-position: center center; }
 
