--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -31,10 +31,12 @@ $font-sans:     "Work Sans", sans-serif;
 @mixin font-huge      { @include font-style($font-display, 5.40vw,5.40vw,5.40vw,5.40vw,5.40vw,   0,     1.3em,  600,  normal); }
 @mixin font-large     { @include font-style($font-display, 2.81vw,2.81vw,2.81vw,2.81vw,2.81vw,   0,     1.3em,  600,  normal); }
 @mixin font-m         { @include font-style($font-display,   18px,  18px,  18px,  18px,  18px,   0,     1.3em,  600,  normal); }
+@mixin font-sans-l    { @include font-style($font-display,   20px,  20px,  20px,  20px,  20px,   0,     1.3em,  600,  normal); }
 
 .font-huge    { @include font-huge; }
 .font-large   { @include font-large; }
 .font-m       { @include font-m; }
+.font-sans-l  { @include font-sans-l; }
 
 
 
