--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -28,10 +28,10 @@ $font-sans:     "Work Sans", sans-serif;
 }
 
 // --------------------------------------------------------- xs --- sm --- md --- lg --- xl ---- lsp -- lh ---- w --- style
-@mixin font-huge      { @include font-style($font-display, 5.40vw,5.40vw,5.40vw,5.40vw,5.40vw,   0,     1.3em,  600,  normal); }
-@mixin font-large     { @include font-style($font-display, 2.81vw,2.81vw,2.81vw,2.81vw,2.81vw,   0,     1.3em,  600,  normal); }
-@mixin font-m         { @include font-style($font-display,   18px,  18px,  18px,  18px,  18px,   0,     1.3em,  600,  normal); }
-@mixin font-sans-l    { @include font-style($font-display,   20px,  20px,  20px,  20px,  20px,   0,     1.3em,  600,  normal); }
+@mixin font-huge      { @include font-style($font-display, 5.40vw,5.40vw,5.40vw,5.40vw,5.40vw,   0,     1.3em,  400,  normal); }
+@mixin font-large     { @include font-style($font-display, 2.81vw,2.81vw,2.81vw,2.81vw,2.81vw,   0,     1.3em,  400,  normal); }
+@mixin font-m         { @include font-style($font-display,   18px,  18px,  18px,  18px,  18px,   0,     1.3em,  400,  normal); }
+@mixin font-sans-l    { @include font-style($font-sans,      20px,  20px,  20px,  20px,  20px,   0,     1.3em,  400,  normal); }
 
 .font-huge    { @include font-huge; }
 .font-large   { @include font-large; }
