--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -206,6 +206,18 @@ html body input:-internal-autofill-selected {
     .img-container .portrait-img:nth-of-type(2n+1) {
       margin-top: -10vw; }
 
+#home .col-md-4 {
+  margin-top: 10vw; }
+  #home .col-md-4 .cyan-img, #home .col-md-4 .portrait-img {
+    width: 100%;
+    height: 0;
+    padding-bottom: 110%;
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat; }
+  #home .col-md-4:nth-of-type(3n+2) {
+    margin-top: -10vw; }
+
 #collection section.collection-opening {
   height: 90vh;
   background-size: cover;
