--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -106,6 +106,24 @@ $double-margin: $margin*2;
 	}
 }
 
+
+#home {
+	.col-md-4 {
+		margin-top: 10vw;
+		.cyan-img, .portrait-img {
+	    width: 100%;
+			height: 0;
+		  padding-bottom: 110%;
+		  background-size: contain;
+	    background-position: center center;
+	    background-repeat: no-repeat;
+		}
+		&:nth-of-type(3n+2) {
+			margin-top: -10vw;
+		}
+	}
+}
+
 #collection {
 	section.collection-opening {
 		height: 90vh;
