--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -108,24 +108,35 @@ $double-margin: $margin*2;
 
 
 #home {
-	.col-md-4 {
-		margin-top: 10vw;
-		.cyan-img, .portrait-img {
-	    width: 100%;
-			height: 0;
-		  padding-bottom: 110%;
-		  background-size: contain;
-	    background-position: center center;
-	    background-repeat: no-repeat;
+	.home-opening {
+		.container-fluid {
+			.row {
+				padding-top: 0;
+				padding-bottom: 0;
+			}
 		}
-		&:nth-of-type(3n+2) {
-			margin-top: -10vw;
+	}
+	.home-img-container {
+		margin-top: 10vw;
+		.col-md-4 {
+			margin-top: 10vw;
+			.cyan-img, .portrait-img {
+		    width: 100%;
+				height: 0;
+			  padding-bottom: 110%;
+			  background-size: contain;
+		    background-position: center center;
+		    background-repeat: no-repeat;
+			}
+			&:nth-of-type(3n+2) {
+				margin-top: -10vw;
+			}
 		}
 	}
 }
 
 #collection {
-	section.collection-opening {
+	.collection-opening {
 		height: 90vh;
 		background-size: cover;
 		background-position: center center;
