--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -7,8 +7,8 @@
 $cyan: #6eebde;
 $pink: #ffdada;
 
-$margin: 30px;
-$double-margin: $margin*2;
+$padding: 25px;
+$double-padding: $padding*2;
 
 // ------------------------------------------------------------------------
 // External files import
@@ -63,11 +63,11 @@ $double-margin: $margin*2;
 // ------------------------------------------------------------------------
 
 .container-fluid {
-	padding-left: $double-margin;
-	padding-right: $double-margin;
+	padding-left: $double-padding;
+	padding-right: $double-padding;
 	.row {
-		padding-top: $double-margin;
-		padding-bottom: $double-margin;
+		padding-top: $double-padding;
+		padding-bottom: $double-padding;
 	}
 }
 
@@ -89,23 +89,6 @@ $double-margin: $margin*2;
 	}
 }
 
-.img-container {
-	margin-top: 25vw;
-	.portrait-img {
-		width: calc(50% - 16vw);
-	  height: 0;
-	  padding-bottom: 50%;
-	  margin: 8vw;
-	  display:inline-block;
-	  float: left;
-	  background-size: cover;
-		background-position: center center;
-		&:nth-of-type(2n+1) {
-			margin-top: -10vw;
-		}
-	}
-}
-
 
 #home {
 	.home-opening {
@@ -121,15 +104,21 @@ $double-margin: $margin*2;
 		.col-md-4 {
 			margin-top: 10vw;
 			.cyan-img, .portrait-img {
-		    width: 100%;
+		    max-width: 75%;
 				height: 0;
+				margin: 0 auto;
 			  padding-bottom: 110%;
-			  background-size: contain;
+			  background-size: cover;
 		    background-position: center center;
 		    background-repeat: no-repeat;
 			}
-			&:nth-of-type(3n+2) {
-				margin-top: -10vw;
+			.cyan-img {
+				max-width: 100%;
+			}
+			@include media-breakpoint-up(md) {
+				&:nth-of-type(3n+2) {
+					margin-top: -10vw;
+				}
 			}
 		}
 	}
@@ -141,11 +130,33 @@ $double-margin: $margin*2;
 		background-size: cover;
 		background-position: center center;
 	}
+	.img-container {
+		margin-top: 25vw;
+		.portrait-img {
+			width: 75%;
+		  height: 0;
+		  padding-bottom: 110%;
+		  margin: 12.5%;
+		  display:inline-block;
+		  float: left;
+		  background-size: cover;
+			background-position: center center;
+			@include media-breakpoint-up(md) {
+				width: calc(50% - 16vw);
+				padding-bottom: 50%;
+				&:nth-of-type(2n+1) {
+					margin-top: -10vw;
+				}
+			}
+		}
+	}
 	.text-container {
-		margin-top: -10vw;
+		@include media-breakpoint-up(md) {
+			margin-top: -10vw;
+		}
 	}
 	.moodboard {
-		margin:$double-margin -#{$double-margin};
+		margin:$double-padding -#{$double-padding};
 		height: 0;
 	  padding-bottom: 100%;
 		background-size: cover;
