--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -117,7 +117,7 @@ html body input:-internal-autofill-selected {
     .font-m {
       font-size: 18px; } }
 
-.font-sans-m {
+.font-sans-m, #about .bio-lists h2, #about .bio-lists p, #about .bio-lists a {
   font-family: "Work Sans", sans-serif;
   font-size: 20px;
   letter-spacing: 0;
@@ -126,16 +126,16 @@ html body input:-internal-autofill-selected {
   font-style: normal;
   font-stretch: normal; }
   @media (min-width: 576px) {
-    .font-sans-m {
+    .font-sans-m, #about .bio-lists h2, #about .bio-lists p, #about .bio-lists a {
       font-size: 20px; } }
   @media (min-width: 768px) {
-    .font-sans-m {
+    .font-sans-m, #about .bio-lists h2, #about .bio-lists p, #about .bio-lists a {
       font-size: 20px; } }
   @media (min-width: 992px) {
-    .font-sans-m {
+    .font-sans-m, #about .bio-lists h2, #about .bio-lists p, #about .bio-lists a {
       font-size: 20px; } }
   @media (min-width: 1200px) {
-    .font-sans-m {
+    .font-sans-m, #about .bio-lists h2, #about .bio-lists p, #about .bio-lists a {
       font-size: 20px; } }
 
 .font-sans-s {
@@ -375,5 +375,13 @@ nav#menu a.menu-item, #home a.menu-item {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
     /* IE6-9 */
     z-index: -1; }
+
+#about .bio-lists h2 {
+  font-weight: 600;
+  padding-top: 25px; }
+#about .bio-lists p {
+  padding-bottom: 12.5px; }
+#about .bio-lists a {
+  text-decoration: underline; }
 
 /*# sourceMappingURL=index.css.map */
