--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -77,7 +77,7 @@ html body input:-internal-autofill-selected {
 
 .font-large {
   font-family: "Hatton", serif;
-  font-size: 2.81vw;
+  font-size: 35px;
   letter-spacing: 0;
   line-height: 1.3;
   font-weight: 400;
@@ -85,10 +85,10 @@ html body input:-internal-autofill-selected {
   font-stretch: normal; }
   @media (min-width: 576px) {
     .font-large {
-      font-size: 2.81vw; } }
+      font-size: 35px; } }
   @media (min-width: 768px) {
     .font-large {
-      font-size: 2.81vw; } }
+      font-size: 35px; } }
   @media (min-width: 992px) {
     .font-large {
       font-size: 2.81vw; } }
@@ -194,8 +194,8 @@ a {
   padding-left: 50px;
   padding-right: 50px; }
   .container-fluid .row {
-    padding-top: 50px;
-    padding-bottom: 50px; }
+    padding-top: 25px;
+    padding-bottom: 25px; }
 
 nav#menu {
   position: fixed;
@@ -375,6 +375,9 @@ nav#menu a.menu-item, #home a.menu-item {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
     /* IE6-9 */
     z-index: -1; }
+
+#blog .post-preview {
+  padding-bottom: 25px; }
 
 #about .bio-lists h2 {
   font-weight: 600;
