--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -311,6 +311,17 @@ nav#menu a.menu-item, nav#menu-home a.menu-item {
     @media (min-width: 768px) {
       #home .home-img-container .col-md-4:nth-of-type(3n+2) {
         margin-top: -10vw; } }
+#home .blog-preview {
+  padding: 50px 0;
+  position: relative; }
+  #home .blog-preview:before {
+    content: '';
+    position: absolute;
+    top: -25%;
+    left: -25%;
+    width: 100%;
+    height: 150vh;
+    background: radial-gradient(50% 50% at center, #ffdada 0%, rgba(0, 0, 0, 0) 100%); }
 
 #collections {
   padding-bottom: 50vh; }
