--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -168,6 +168,19 @@ nav#menu, nav#menu-home {
 			}
 		}
 	}
+	.blog-preview {
+		padding: $double-padding 0;
+		position: relative;
+		&:before {
+			content:'';
+			position: absolute;
+			top: -25%;
+	    left: -25%;
+	    width: 100%;
+	    height: 150vh;
+			background: radial-gradient(50% 50% at center, $pink 0%, rgba(0,0,0,0) 100%);
+		} 
+	}
 }
 
 #collections {
