added two collections contents

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -5,7 +5,7 @@
 // ------------------------------------------------------------------------
 
 $cyan: #6eebde;
-$pink: #ffdada;
+$pink: #ffcaca;
 
 $padding: 25px;
 $double-padding: $padding*2;
