--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -321,7 +321,7 @@ nav#menu a.menu-item, nav#menu-home a.menu-item {
     left: -25%;
     width: 100%;
     height: 150vh;
-    background: radial-gradient(50% 50% at center, #ffdada 0%, rgba(0, 0, 0, 0) 100%); }
+    background: radial-gradient(50% 50% at center, #ffcaca 0%, rgba(0, 0, 0, 0) 100%); }
 
 #collections {
   padding-bottom: 50vh; }
