--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -296,6 +296,9 @@ nav#menu a.menu-item, nav#menu-home a.menu-item {
       top: 0; }
 #home .home-img-container {
   margin-top: 10vw; }
+  @media (max-width: 767.98px) {
+    #home .home-img-container {
+      margin-bottom: 10vw; } }
   #home .home-img-container .col-md-4 {
     margin-top: 10vw; }
     #home .home-img-container .col-md-4 .cyan-img, #home .home-img-container .col-md-4 .portrait-img, #home .home-img-container .col-md-4 .empty {
@@ -324,6 +327,9 @@ nav#menu a.menu-item, nav#menu-home a.menu-item {
     #home .home-img-container .col-md-4 .cyan-img {
       width: 100%;
       background-size: contain; }
+    @media (max-width: 767.98px) {
+      #home .home-img-container .col-md-4 .empty {
+        padding-bottom: 0; } }
     @media (min-width: 768px) {
       #home .home-img-container .col-md-4:nth-of-type(3n+2) {
         margin-top: -10vw; } }
