--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -391,11 +391,7 @@ nav#menu a.menu-item, nav#menu-home a.menu-item {
         padding-bottom: 50%; }
         #collection .img-container .portrait-img:nth-of-type(2n+1) {
           margin-top: -10vw; } }
-@media (min-width: 768px) {
-  #collection .text-container {
-    margin-top: -10vw; } }
-#collection .moodboard {
-  margin: 50px -50px;
+#collection .moodboard-container {
   height: 0;
   padding-bottom: 100%;
   background-size: cover;
